test/fixtures/type-error/badReturnType.ro
type i32 = ???
type f32 = ???

export fun test(): f32 = 1